ui layout shifting fix

--- a/src/app/(index)/globals.css
+++ b/src/app/(index)/globals.css
@@ -2,12 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+body {
+    margin: 0;
+    padding: 0;
 }
 
+html,body,:root {
+    height: 100%;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
